--- a/frontend/src/pages/AdminPanel/AdminPanel.css
+++ b/frontend/src/pages/AdminPanel/AdminPanel.css
@@ -1,5 +1,6 @@
-.teste{
-    height: 100vh;
+.btn-container{
     width: 100%;
-    background-color: blue;
+    display: flex;
+    justify-content: flex-end;
+    padding: 2rem 2rem 0 0;
 }
