--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,12 @@ a:visited, a{
   
 }
 
+html, #root{
+    height: 100%;
+}
+
 body{
     background-color: #333;
     color: white;
+    height: 100%;
 }
